--- a/02-carousel.css
+++ b/02-carousel.css
@@ -27,8 +27,7 @@ img {
   margin: 100px auto;
   border-radius: 8px;
   position: relative;
-  padding: 32px;
-  padding-left: 86px;
+  padding: 32px 48px 32px 86px;
   display: flex;
   align-items: center;
   gap: 86px;
@@ -63,7 +62,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0 12px 24px rgba(0,0,0,0.6);
+  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.6);
   cursor: pointer;
 }
 
@@ -85,4 +84,26 @@ img {
   right: 0;
   top: 50%;
   transform: translate(50%, -50%);
+}
+
+.dots {
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translate(-50%, 32px);
+  display: flex;
+  gap: 10px
+}
+
+.dot {
+  height: 10px;
+  width: 10px;
+  background-color: #fff;
+  border-radius: 50%;
+  cursor: pointer;
+  border: 2px solid #087f5b;
+}
+
+.dot--fill{
+  background-color: #087f5b;
 }
